# hermanscodebase

./: CLAUDE.md  pyproject.toml  requirements.txt
config/: settings.py
src/options_pricer/: bloomberg.py  bloomberg_bridge.py  bridge_setup.py  models.py  order_store.py  parser.py  pricer.py  settings.py  standalone_bridge.py  structure_pricer.py
src/options_pricer/dashboard/: app.py  layouts.py
tests/: test_bloomberg_bridge.py  test_order_store.py  test_parser.py  test_structure_pricer.py
