[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-pricer"
version = "0.1.0"
description = "Options pricing tool for IDB equity derivatives brokers"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.14.0",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "flask-socketio>=5.3.0",
    "simple-websocket>=1.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
bloomberg = [
    "blpapi>=3.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
